--- a/css/all.css
+++ b/css/all.css
@@ -77,7 +77,7 @@ body {
 
 /* 全站設定 */
 .container {
-  max-width: 640px;
+  width: 640px;
   margin: 0 auto;
 }
 
@@ -87,7 +87,7 @@ main {
 }
 
 .container-img {
-  max-width: 96px;
+  width: 96px;
   display: flex;
   flex-direction: column;
 }
@@ -107,7 +107,7 @@ main {
 }
 
 .img-width216 {
-  max-width: 216px;
+  width: 216px;
 }
 
 footer {
